# streams

./: .buildinfo  .envrc  .gitignore  .pr-body-dotagents.md  .pre-commit-config.yaml  AGENTS.md  Brewfile  Cargo.toml  IN_MEMORY_TESTING.md  Makefile  README.md  agents.toml  architecture.html  build_pipeline.html  configure_pipeline.html  deployment.html  docs-requirements.txt  flink_bridge_readme.md  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  rust.html  search.html  searchindex.js  setup.cfg  what_for.html
flink_worker/: README.md  pyproject.toml
flink_worker/flink_worker/: __init__.py  app_segments.py  client.py  flink_worker_pb2.py  flink_worker_pb2_grpc.py  segment.py  server.py  service.py  test_app_segments.py  test_service.py
py/: mypy.ini  pyproject.toml
py/sentry_streams/: example.py  example_config.py  pipeline.py  primitives.py  runner.py  sample_function.py  sample_functions.py  sinks.py  utils.py  window.py
py/sentry_streams/adapters/: flink_adapter.py  loader.py  stream_adapter.py
py/sentry_streams/dummy/: dummy_adapter.py
py/sentry_streams/examples/: alerts.py  batching.py  billing.py  billing_buffer.py  events.py  spans.py  spans_buffer.py  word_counter.py  word_counter_fn.py
py/sentry_streams/flink/: flink_adapter.py  flink_agg_fn.py  flink_fn_translator.py
py/sentry_streams/flink_runtime/: flink_deploy  flink_deploy.py  flink_stop  flink_stop.py
py/sentry_streams/user_functions/: agg_template.py  function_template.py  sample_agg.py  sample_filter.py  sample_group_by.py  sample_map.py
py/tests/: test_pipeline.py
py/tests/adapters/: test_flink.py
py/tests/flink_runtime/: test_api.py
sentry_flink/: AGENTS.md  README.md  pyproject.toml
sentry_flink/sentry_flink/flink/: flink_adapter.py  flink_translator.py
sentry_flink/sentry_flink/flink_runtime/: flink_deploy.py  flink_stop.py
sentry_flink/tests/: README.md  test_pipeline.py  test_translator.py
sentry_flink/tests/adapters/: test_flink.py
sentry_flink/tests/flink_runtime/: test_api.py
sentry_streams/: .craft.yml  .dockerignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  deployment_config.yaml  docker_entrypoint.sh  mypy.ini  pyproject.toml  rust_streams.pyi
sentry_streams/docs/source/: conf.py  configure_pipeline.rst  devenv.rst  docker.rst  index.rst  intro.rst
sentry_streams/examples/: in_memory_test_example.py
sentry_streams/integration_tests/: test_example_pipelines.py
sentry_streams/k8s/: operator.deploy.yaml
sentry_streams/scripts/: benchmark_fake_transform_trace_item.py  generate_trace_item_kafka_traffic.py
sentry_streams/sentry_streams/: config.json  config_types.py  deployment_config.yaml  example_config.py  pipeline.py  runner.py  runner_config.py  rust_streams.pyi  sample_function.py  testing.py  validation.py
sentry_streams/sentry_streams/adapters/: __init__.py  loader.py  stream_adapter.py
sentry_streams/sentry_streams/deployment_config/: README.md  alerts_config.yaml  blq_config.yaml  config.json  container_transformer_config.yaml  devnull_benchmark.yaml  envvars.yaml  filter_profile.yaml  flink_blq_config.yaml  flink_transformer_config.yaml  items_spans.yaml  parallel_processing.yaml  profile_example.yaml  simple_batching.yaml  simple_batching_grpc.yaml  simple_map.yaml  simple_map_filter.yaml  simple_map_filter_grpc.yaml  test_flink_config.yaml  transformer.yaml  transformer_config.yaml  wasm_processor.yaml
sentry_streams/sentry_streams/dummy/: dummy_adapter.py
sentry_streams/sentry_streams/examples/: alerts.py  batch_builder.py  batching.py  billing.py  blq.py  blq_fn.py  broadcast.py  devnull_benchmark.py  events.py  filter_profile.py  gcs_sink.py  items_spans.py  multi_chain.py  parallel_processing.py  parquet_serializer.py  profile_example.py  routing.py  simple_batching.py  simple_map.py  simple_map_filter.py  span_helpers.py  spans_buffer.py  transfomer.py  transform_metrics.py  transform_profiles.py  transformer.py  wasm_processor.py  word_counter.py  word_counter_fn.py
sentry_streams/sentry_streams/flink_runtime/: flink_api.py
sentry_streams/sentry_streams/k8s/: generate.py
sentry_streams/sentry_streams/metrics/: __init__.py  metrics.py  stats.py
sentry_streams/sentry_streams/pipeline/: __init__.py  batch.py  chain.py  config.py  datatypes.py  exception.py  function_template.py  message.py  msg_codecs.py  msg_parser.py  pipeline.py  rust_function_protocol.py  validation.py  window.py
sentry_streams/sentry_streams/user_functions/: sample_map.py  (+1 more)
sentry_streams/src/: backpressure_metrics.rs  batch_step.rs  broadcast.rs  broadcaster.rs  callers.rs  commit_policy.rs  committable.rs  consumer.rs  dev_null_sink.rs  fake_strategy.rs  ffi.rs  filter_step.rs  gcs_writer.rs  header_filter_step.rs  helper.rs  kafka_config.rs  lib.rs  macros.rs  main.rs  message.rs  messages.rs  metrics.rs  metrics_config.rs  operators.rs  pipeline_stats.rs  python_operator.rs  routers.rs  routes.rs  run.rs  sinks.rs  steps.rs  store_sink.rs  store_sinks.rs  strategies.rs  test_operators.rs  testutils.rs  transformer.rs  unfold.rs  utils.rs  wasm_processor.rs  (+1 more)
sentry_streams/tests/: test_dlq.py  test_example_pipelines.py  test_flink_worker_imports.py  test_in_memory_consumer.py  test_load_runtime.py  test_mypy_integration.py  test_pipeline.py  test_pipeline_w_messages.py  test_runner.py  test_rust_functions_integration.py  test_validation.py
sentry_streams/wit/: processor.wit
sentry_streams_k8s/: .craft.yml  AGENTS.md  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
sentry_streams_k8s/sentry_streams_k8s/: __init__.py  consumer.py  merge.py  pipeline_step.py  validation.py
sentry_streams_k8s/tests/: test_basic.py  test_consumer.py  test_merge.py  test_pipeline_step.py  test_streaming_consumer.py  test_validation.py
sentry_streams_operator/: Makefile  pyproject.toml
sentry_streams_operator/docker/: Dockerfile.operator
sentry_streams_operator/sentry_streams_operator/: generate.py  op.py  rbac.py  runenv.py  settings.py
sentry_streams_operator/tests/: test_settings.py
(+185 files in other folders)
