[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-streams"
version = "0.0.1"
description = "The python Sentry Streaming API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-flink>=1.20.0",
    "setuptools>=75.8.0",
    "requests",
    "types-requests",
]

[tool.setuptools]
packages = ["sentry_streams"]

[tool.setuptools.package-data]
sentry_streams = ["py.typed"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
# File filtering is taken care of in pre-commit.
line-length = 100

[tool.isort]
profile = "black"
