[package]
name = "rust_streams"
version = "0.1.0"
edition = "2021"


[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
sentry_arroyo = "2.19.5"
chrono = "0.4.40"
tracing-subscriber = "0.3.18"
ctrlc = "3.4.6"

[lib]
name = "rust_streams"
crate-type = ["cdylib"]
