[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-streams"
version = "0.0.11"
description = "The python Sentry Streaming API"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "sentry-arroyo>=2.18.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "responses>=0.25.6",
    "types-requests>=2.32.0",
]

[tool.setuptools.package-data]
sentry_streams = ["py.typed"]

[tool.pytest.ini_options]
minversion = "0.0.11"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
# File filtering is taken care of in pre-commit.
line-length = 100

[tool.isort]
profile = "black"
