[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-streams"
version = "0.0.15"
description = "The python Sentry Streaming API"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "sentry-arroyo>=2.18.2",
    "pyyaml>=6.0.2",
    "jsonschema>=4.23.0",
]

[dependency-groups]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "sphinxcontrib-mermaid>=1.0.0",
]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "responses>=0.25.6",
    "types-requests>=2.32.0",
    "types-PyYAML>=6.0.12",
    "types-jsonschema>=4.23.0",
]

[tool.setuptools.package-data]
sentry_streams = ["py.typed", "config.json"]

[tool.pytest.ini_options]
minversion = "0.0.15"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
# File filtering is taken care of in pre-commit.
line-length = 100

[tool.isort]
profile = "black"
