[package]
name = "rust_test_functions"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_test_functions"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"

# Depend on the main rust_streams crate for macros
[dependencies.rust_streams]
path = "../../"
default-features = false
